--- a/login.html
+++ b/login.html
@@ -101,7 +101,11 @@
                 <li><a href="smart-edit.html">智改</a></li>
                 <li><a href="pricing.html">价格</a></li>
                 <li><a href="notice.html">公告</a></li>
-                <li><a href="login.html" class="active login-btn">登录</a></li>
+                <li id="user-info" style="display: none;">
+                    <span id="username-display"></span>
+                    <button id="logout-btn">退出</button>
+                </li>
+                <li><a href="login.html" class="login-btn" id="login-link">登录</a></li>
             </ul>
         </nav>
     </header>
@@ -154,6 +158,7 @@
                 // 登录成功
                 localStorage.setItem('currentUser', username);
                 localStorage.setItem('userPoints', '100'); // 设置初始积分
+                localStorage.setItem('userRole', 'admin'); // 设置用户角色
                 window.location.href = 'index.html';
             } else {
                 showError('passwordError', '用户名或密码错误');
@@ -165,6 +170,28 @@
             element.textContent = message;
             element.style.display = 'block';
         }
+
+        // 登录成功后显示用户信息
+        function displayUserInfo() {
+            const currentUser = localStorage.getItem('currentUser');
+            if (currentUser) {
+                document.getElementById('username-display').textContent = `欢迎, ${currentUser}`;
+                document.getElementById('user-info').style.display = 'inline';
+                document.getElementById('login-link').style.display = 'none';
+            }
+        }
+
+        // 退出功能
+        document.getElementById('logout-btn').addEventListener('click', function() {
+            localStorage.removeItem('currentUser');
+            localStorage.removeItem('userPoints');
+            localStorage.removeItem('userRole');
+            alert('您已成功退出');
+            window.location.href = 'login.html'; // 重定向到登录页面
+        });
+
+        // 页面加载时显示用户信息
+        document.addEventListener('DOMContentLoaded', displayUserInfo);
     </script>
 </body>
 </html> 
